labs/configure-ingress/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-aks
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - khaksingress.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: khaksingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: /app1
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: /app2
        backend:
          serviceName: kh-ingress-demo
          servicePort: 80
